@@ -1,225 +1,179 @@
 # IT Asset Management System
 
 [![Java](https://img.shields.io/badge/Java-21-orange)](https://openjdk.java.net/)
-[![Maven](https://img.shields.io/badge/Maven-3.6+-blue)](https://maven.apache.org/)
-[![MySQL](https://img.shields.io/badge/MySQL-8.0+-blue)](https://www.mysql.com/)
+[![Maven](https://img.shields.io/badge/Maven-3.6%2B-blue)](https://maven.apache.org/)
+[![MySQL](https://img.shields.io/badge/MySQL-8.0%2B-blue)](https://www.mysql.com/)
 [![JavaFX](https://img.shields.io/badge/JavaFX-23-green)](https://openjfx.io/)
 [![License](https://img.shields.io/badge/License-Educational-red)](#license)
 
-A project made in compliance with the requirements for **CMSC 127 - File Processing and Database Systems**.
+Course project for **CMSC 127 - File Processing and Database Systems**.
 
-## 📋 Table of Contents
+## Overview
 
-- [Overview](#overview)
-- [Features](#features)
-- [Project Metadata](#project-metadata)
-- [Folder Structure](#folder-structure)
-- [Prerequisites](#prerequisites)
-- [Setup Instructions](#setup-instructions)
-- [How to Run](#how-to-run)
-- [Usage](#usage)
-- [Dependencies](#dependencies)
-- [Testing](#testing)
-- [Contributing](#contributing)
-- [License](#license)
+The **IT Asset Management System (ITAMS)** is a JavaFX desktop application for managing IT equipment, employees, categories, departments, and asset transactions. It stores data in MySQL and includes first-run database setup, role-based login, reporting, and import/export features.
 
-## 📖 Overview
+## Features
 
-The **IT Assets Management System (ITAMS)** is a Java-based desktop application designed to manage IT assets within an organization. It provides functionality for tracking equipment, employees, departments, and asset transactions such as check-in and check-out operations. The system features a user-friendly graphical interface built with JavaFX and FXML, and it uses a MySQL database for data persistence.
+- User authentication with Admin and Employee access modes
+- Department, employee, category, equipment, and unit management
+- Check-in and check-out transaction tracking
+- Transaction history and reporting
+- Import and export tools
+- First-run database setup with automatic `.env` generation
 
-## ✨ Features
-
-- 🔐 **User Authentication** and role-based access (Admin/Staff)
-- 🏢 **Department Management** - Add, edit, and manage organizational departments
-- 👥 **Employee Management** - Handle employee records and assignments
-- 📦 **Equipment Tracking** - Monitor IT assets with detailed information
-- 🏷️ **Category Management** - Organize equipment by categories
-- 📥📤 **Check-in/Check-out** - Track asset borrowing and returns
-- 📊 **Transaction History** - View complete audit trail of asset movements
-- 📄 **Reporting** - Generate PDF reports for assets and transactions
-- 📥📤 **Import/Export** - Data migration capabilities
-
-## 📋 Project Metadata
+## Project Metadata
 
 | Property | Value |
 |----------|-------|
-| **Group ID** | `itams` |
-| **Artifact ID** | `it-assets-manager` |
-| **Version** | `0.1` |
-| **Java Version** | 21 |
-| **Build Tool** | Maven |
-| **UI Framework** | JavaFX |
-| **Database** | MySQL |
+| Group ID | `itams` |
+| Artifact ID | `it-assets-manager` |
+| Version | `0.1` |
+| Java Version | `21` |
+| Build Tool | `Maven` |
+| UI Framework | `JavaFX 23` |
+| Database | `MySQL 8+` |
 
-## 📁 Folder Structure
+## Folder Structure
 
-```
+```text
 IT-Assets-Management-System/
-├── app.env                          # 🔧 Environment configuration file
-├── pom.xml                          # 📦 Maven project configuration
-├── README.md                        # 📖 This file
-├── src/
-│   ├── main/
-│   │   ├── java/
-│   │   │   ├── dao/
-│   │   │   │   ├── dao_util/
-│   │   │   │   │   ├── CredentialManager.java  # 🔑 Handles environment variables
-│   │   │   │   │   └── DBUtil.java             # 🗄️ Database connection utility
-│   │   │   │   ├── handler/                     # 🔄 Data access handlers
-│   │   │   │   │   ├── CategoryHandler.java
-│   │   │   │   │   ├── DepartmentHandler.java
-│   │   │   │   │   ├── EmployeeHandler.java
-│   │   │   │   │   ├── EquipmentHandler.java
-│   │   │   │   │   └── ... (other handlers)
-│   │   │   │   ├── impl/                        # ⚙️ Implementation classes
-│   │   │   │   ├── intfc/                       # 🔌 Interfaces
-│   │   │   │   └── model/                       # 📋 Data model classes
-│   │   │   └── itams/
-│   │   │       └── App.java                     # 🚀 Main application class
-│   │   └── resources/
-│   │       ├── css/                             # 🎨 Stylesheets
-│   │       │   ├── dashboard.css
-│   │       │   └── unitsList.css
-│   │       ├── fxml/                            # 🖼️ UI layout files
-│   │       │   ├── addAsset.fxml
-│   │       │   ├── AddCategory.fxml
-│   │       │   ├── addEmployee.fxml
-│   │       │   ├── AddEquipment.fxml
-│   │       │   ├── AddRemarks.fxml
-│   │       │   ├── categoryList.fxml
-│   │       │   ├── Check-in.fxml
-│   │       │   ├── Check-out.fxml
-│   │       │   ├── Dashboard.fxml
-│   │       │   ├── editAsset.fxml
-│   │       │   ├── editCategory.fxml
-│   │       │   ├── editEquipment.fxml
-│   │       │   ├── Employee.fxml
-│   │       │   ├── equipmentList.fxml
-│   │       │   ├── importExport.fxml
-│   │       │   ├── login.fxml
-│   │       │   ├── report.fxml
-│   │       │   ├── Transaction.fxml
-│   │       │   ├── unitsList.fxml
-│   │       │   └── viewTransaction.fxml
-│   │       └── sql/
-│   │           └── itams_db.sql                  # 🗃️ Database schema and sample data
-│   └── test/
-│       └── java/
-│           └── itams/
-│               └── AppTest.java                 # 🧪 Unit tests
-└── target/                                      # 🏗️ Build output directory
-    ├── classes/                                 # 📂 Compiled classes
-    ├── generated-sources/
-    ├── maven-status/
-    └── test-classes/
+|-- pom.xml
+|-- README.md
+|-- ITAMS-Standalone-PORTABLE-FIXED.exe
+|-- DEBUG_DIST/                  # Portable packaging files
+|-- src/
+|   |-- main/
+|   |   |-- java/
+|   |   |   |-- dao/
+|   |   |   |   |-- dao_util/
+|   |   |   |   |   |-- CredentialManager.java
+|   |   |   |   |   |-- DatabaseSetup.java
+|   |   |   |   |   `-- DBUtil.java
+|   |   |   |   |-- handler/
+|   |   |   |   |-- impl/
+|   |   |   |   |-- intfc/
+|   |   |   |   `-- model/
+|   |   |   |-- itams/
+|   |   |   |   |-- App.java
+|   |   |   |   `-- AppConfig.java
+|   |   |   `-- ui/
+|   |   |       |-- controller/
+|   |   |       |-- service/
+|   |   |       `-- util/
+|   |   `-- resources/
+|   |       |-- css/
+|   |       |-- fxml/
+|   |       `-- sql/
+|   `-- test/
+|       `-- java/
+`-- target/                      # Maven build output
 ```
 
-## 📋 Prerequisites
+Notes:
 
-Before running the application, ensure you have the following installed:
+- `.env` is not meant to be committed. It is generated automatically on first successful setup.
+- `target/` and some files in `DEBUG_DIST/` are generated build artifacts.
 
-- ☕ **Java 21** or higher
-- 📦 **Maven 3.6+**
-- 🗄️ **MySQL 8.0+**
-- 🎨 **JavaFX** (included as dependency)
+## Prerequisites
 
-## 🛠️ Setup Instructions
+Before running the project from source, install:
 
-### 1. Database Setup
+- Java 21
+- Maven 3.6 or newer
+- MySQL Server 8.0 or newer
 
-1. 📥 Install MySQL Server on your system.
-2. 🗃️ Create a new database named `itams_db`:
-   ```sql
-   CREATE DATABASE itams_db;
-   ```
-3. 📤 Import the database schema and sample data:
-   ```bash
-   mysql -u root -p itams_db < src/main/resources/sql/itams_db.sql
-   ```
+JavaFX is already declared in `pom.xml` as a project dependency.
 
-### 2. Environment Configuration
+## First-Run Setup
 
-1. ✏️ Edit the `app.env` file to configure database credentials:
-   ```env
-   user=root
-   password=your_mysql_password
-   ```
-   Replace `your_mysql_password` with your actual MySQL root password.
+The application now handles first-run setup directly.
 
-## 🚀 How to Run
+1. Start the app.
+2. If no valid `.env` file exists, the **Database Configuration** dialog appears.
+3. Enter your MySQL host, port, username, and password.
+4. The app tests the connection, creates the `itams_db` database if needed, and loads the SQL schema from `src/main/resources/sql/itams_db.sql`.
+5. A `.env` file is then created automatically.
 
-1. **Clone or navigate to the project directory:**
-   ```bash
-   cd IT-Assets-Management-System/ITAMS/IT-Assets-Management-System
-   ```
+Behavior of `.env`:
 
-2. **Compile the project:**
-   ```bash
-   mvn clean compile
-   ```
+- When running the portable executable, `.env` is created beside the `.exe`.
+- When running from source, `.env` is created in the current working directory.
+- If `.env` is deleted, the app treats the next launch as a first run and asks for MySQL credentials again.
 
-3. **Run the application:**
-   ```bash
-   mvn javafx:run
-   ```
+## How to Run
 
-   > **Alternative:** Run directly with Java (after compilation):
-   ```bash
-   java --module-path "path/to/javafx/lib" --add-modules javafx.controls,javafx.fxml -cp target/classes itams.App
-   ```
-   Replace `path/to/javafx/lib` with the actual path to your JavaFX library.
+### Run from source
 
-## 📖 Usage
+From the project root:
 
-### Login Credentials
+```bash
+mvn clean compile
+mvn javafx:run
+```
 
-Use the credentials from the sample data in `itams_db.sql`:
+### Run the portable build
 
-| Role | Username | Password |
-|------|----------|----------|
+You can also run:
+
+```text
+ITAMS-Standalone-PORTABLE-FIXED.exe
+```
+
+This version stores its `.env` file in the same folder as the executable.
+
+## Usage
+
+### Sample login credentials
+
+The seeded SQL file includes these sample accounts:
+
+| Access in app | Username | Password |
+|---------------|----------|----------|
 | Admin | `admin_xeon` | `pass123` |
-| Staff | `staff_andrei` | `pass456` |
+| Employee | `staff_andrei` | `pass456` |
 
-### Application Workflow
+Note: the login screen uses the role label **Employee**, even though the seed data stores that user role as `Staff`.
 
-1. **🔐 Login:** Enter your credentials on the login screen
-2. **🏠 Dashboard:** Access the main dashboard to manage assets, employees, and transactions
-3. **📋 Features:**
-   - ➕ Add/Edit/Delete equipment, categories, departments, and employees
-   - 📥📤 Check-in/Check-out assets
-   - 📊 View transaction history
-   - 📄 Generate reports
-   - 📥📤 Import/Export data
+### Typical workflow
 
-## 📦 Dependencies
+1. Complete database setup on first launch if prompted.
+2. Log in with an Admin or Employee account.
+3. Use the dashboard to manage assets, employees, transactions, reports, and imports/exports.
+
+## Dependencies
 
 | Dependency | Purpose |
 |------------|---------|
-| **JavaFX** | GUI framework for desktop application |
-| **MySQL Connector/J** | Database connectivity |
-| **OpenPDF** | PDF report generation |
-| **JUnit** | Unit testing framework |
+| JavaFX | Desktop UI |
+| MySQL Connector/J | Database connectivity |
+| OpenPDF | PDF report generation |
+| JUnit | Test support |
 
-## 🧪 Testing
+## Testing
 
-Run the tests using Maven:
+Run tests with:
+
 ```bash
 mvn test
 ```
 
-## 🤝 Contributing
+## Packaging Notes
 
-This is a course project for **CMSC 127**. For modifications:
+The repository includes a portable Windows build workflow under `DEBUG_DIST/`. The current final portable artifact is:
 
-- ✅ Ensure changes are tested
-- 📝 Follow the existing code structure
-- 🔄 Maintain database schema integrity
-- 🎨 Keep UI consistent with JavaFX design
+```text
+ITAMS-Standalone-PORTABLE-FIXED.exe
+```
 
-## 📄 License
+## Contributing
 
-This project is for **educational purposes** as part of CMSC 127 coursework.
+This is a course project. If you modify it:
 
----
+- Keep the JavaFX and FXML structure consistent
+- Preserve database compatibility with `itams_db.sql`
+- Test first-run setup and login flow after credential or database changes
+- Avoid committing generated `.env` files or disposable build artifacts
 
-⭐ **Star this repo** if you find it helpful!
+## License
+
+This project is for educational use as part of CMSC 127 coursework.
